# stochos

./: Cargo.toml  README.md  flake.nix  install.sh
.github/workflows/: ci.yml  release.yml
nix/: module.nix  package.nix
src/: app.rs  cli.rs  config.rs  input.rs  macro_store.rs  main.rs  overlay.rs  render.rs
src/backend/: macos.rs  mod.rs  wayland.rs  x11.rs
src/hint/: atspi.rs  ax.rs  cv.rs  detect.rs  mod.rs
src/hint/compositor/: hyprland.rs  mod.rs  sway.rs
src/mode/: bisect.rs  free.rs  hint.rs  macro_bind_key.rs  macro_name.rs  macro_replay.rs  macro_search.rs  mod.rs  normal.rs  recording.rs
