[package]
name = "stochos"
version = "0.3.5"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Keyboard-driven mouse control"
repository = "https://github.com/museslabs/stochos"
homepage = "https://github.com/museslabs/stochos"
readme = "README.md"
keywords = ["wayland", "macos", "mouse", "keyboard", "accessibility"]
categories = ["accessibility"]
exclude = ["example.gif", "target/*", "nix/*", "flake.*", "shell.nix", "install.sh", "todo.md", "CLAUDE.md", ".github/*", ".claude/*"]

[features]
default = ["wayland", "x11"]
wayland = ["dep:wayland-client", "dep:wayland-protocols-wlr", "dep:tempfile"]
x11 = ["dep:x11rb"]

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
font8x8 = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
nix = { version = "0.31", features = ["fs"] }

[target.'cfg(target_os = "linux")'.dependencies]
wayland-client = { version = "0.31", optional = true }
wayland-protocols-wlr = { version = "0.3", features = ["client"], optional = true }
tempfile = { version = "3", optional = true }
x11rb = { version = "0.13", features = ["xtest"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSDate", "NSGeometry", "NSString", "NSValue"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSColor", "NSEvent", "NSPanel", "NSResponder", "NSScreen", "NSView", "NSWindow"] }
